[gd_scene load_steps=108 format=3 uid="uid://b603clqbguc3q"]

[ext_resource type="Script" path="res://Scripts/enemy/forgotten_golem.gd" id="1_sed1a"]
[ext_resource type="Texture2D" uid="uid://b22esc8f8445m" path="res://Assets/Sprites/enemies/forgotten_golem.png" id="2_cp87h"]
[ext_resource type="PackedScene" uid="uid://q3bng0o4u44l" path="res://Scenes/enemies/damage_player.tscn" id="3_qvvkh"]
[ext_resource type="AudioStream" uid="uid://do7ua7yj6sjba" path="res://Assets/Audio/forgotten_golem/laser_attack.mp3" id="4_iy55y"]
[ext_resource type="AudioStream" uid="uid://q3oe074iycdw" path="res://Assets/Audio/forgotten_golem/power-on-39172.mp3" id="4_r41nb"]
[ext_resource type="AudioStream" uid="uid://ci0gjw23q1fjp" path="res://Assets/Audio/earth_elemental/cinematic-rock-smash-177982.mp3" id="4_rmir1"]
[ext_resource type="AudioStream" uid="uid://bnhyfbesh82ug" path="res://Assets/Audio/forgotten_golem/power-off-96139.mp3" id="5_h63cs"]
[ext_resource type="AudioStream" uid="uid://cx3nro8tcsa6v" path="res://Assets/Audio/forgotten_golem/the-magical-surprise-141291.mp3" id="8_qr1pw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yuh82"]
radius = 10.7984
height = 26.3941

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6k7h3"]
resource_local_to_scene = true

[sub_resource type="AtlasTexture" id="AtlasTexture_veugf"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iv7v2"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_flp50"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2pyv"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwxo2"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdgl2"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfswc"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1tyh"]
atlas = ExtResource("2_cp87h")
region = Rect2(672, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma00w"]
atlas = ExtResource("2_cp87h")
region = Rect2(768, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx6ky"]
atlas = ExtResource("2_cp87h")
region = Rect2(864, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw22l"]
atlas = ExtResource("2_cp87h")
region = Rect2(960, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4atfm"]
atlas = ExtResource("2_cp87h")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8wr"]
atlas = ExtResource("2_cp87h")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ccfe"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tayy8"]
atlas = ExtResource("2_cp87h")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnjar"]
atlas = ExtResource("2_cp87h")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2g7w"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugw8r"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg38i"]
atlas = ExtResource("2_cp87h")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlew5"]
atlas = ExtResource("2_cp87h")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfhiy"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0lnm"]
atlas = ExtResource("2_cp87h")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3fhn"]
atlas = ExtResource("2_cp87h")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnx1c"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qptn"]
atlas = ExtResource("2_cp87h")
region = Rect2(448, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqgb4"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhm6a"]
atlas = ExtResource("2_cp87h")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pm10"]
atlas = ExtResource("2_cp87h")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kans"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_puijr"]
atlas = ExtResource("2_cp87h")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ysp"]
atlas = ExtResource("2_cp87h")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08f1a"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4pwp"]
atlas = ExtResource("2_cp87h")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6r0r"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gw2u"]
atlas = ExtResource("2_cp87h")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gduo"]
atlas = ExtResource("2_cp87h")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv8gq"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdjem"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_03yah"]
atlas = ExtResource("2_cp87h")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoir7"]
atlas = ExtResource("2_cp87h")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jph3f"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vnn4"]
atlas = ExtResource("2_cp87h")
region = Rect2(960, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnya7"]
atlas = ExtResource("2_cp87h")
region = Rect2(864, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0exk7"]
atlas = ExtResource("2_cp87h")
region = Rect2(768, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp5bq"]
atlas = ExtResource("2_cp87h")
region = Rect2(672, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej3o3"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo5c7"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3y56"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh8rb"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7ldw"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nec0y"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdspe"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 576, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_othcw"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1lhfn"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwfmv"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dm7il"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gd3p"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eidxh"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_272lh"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 448, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqun5"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7catg"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3rs4"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ya8rk"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygefj"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_akhny"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccj8l"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 384, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojipj"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu8q5"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_14rer"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf22x"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kiewq"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slu62"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1610"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4tl0a"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeiic"]
atlas = ExtResource("2_cp87h")
region = Rect2(672, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xlrp"]
atlas = ExtResource("2_cp87h")
region = Rect2(768, 320, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cybcg"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kim8"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uktlg"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ceagp"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1vbr"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtb0d"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_81nye"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeade"]
atlas = ExtResource("2_cp87h")
region = Rect2(672, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm0ve"]
atlas = ExtResource("2_cp87h")
region = Rect2(768, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbspi"]
atlas = ExtResource("2_cp87h")
region = Rect2(768, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls8dn"]
atlas = ExtResource("2_cp87h")
region = Rect2(672, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyf41"]
atlas = ExtResource("2_cp87h")
region = Rect2(576, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_om8fv"]
atlas = ExtResource("2_cp87h")
region = Rect2(480, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ujnq"]
atlas = ExtResource("2_cp87h")
region = Rect2(384, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkkhg"]
atlas = ExtResource("2_cp87h")
region = Rect2(288, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj0jh"]
atlas = ExtResource("2_cp87h")
region = Rect2(192, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8iqj"]
atlas = ExtResource("2_cp87h")
region = Rect2(96, 256, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu07h"]
atlas = ExtResource("2_cp87h")
region = Rect2(0, 256, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnjlw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_veugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iv7v2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flp50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2pyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwxo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdgl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1tyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ma00w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx6ky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw22l")
}],
"loop": false,
"name": &"dying",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4atfm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8wr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ccfe")
}],
"loop": false,
"name": &"hit_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tayy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnjar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2g7w")
}],
"loop": false,
"name": &"hit_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugw8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg38i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlew5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfhiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0lnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3fhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnx1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qptn")
}],
"loop": false,
"name": &"laser_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqgb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhm6a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pm10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kans")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_puijr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ysp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08f1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4pwp")
}],
"loop": false,
"name": &"laser_right",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6r0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gw2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gduo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv8gq")
}],
"loop": true,
"name": &"look_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdjem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03yah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoir7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jph3f")
}],
"loop": true,
"name": &"look_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vnn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnya7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0exk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp5bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej3o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo5c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3y56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh8rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7ldw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nec0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdspe")
}],
"loop": false,
"name": &"spawning",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_othcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1lhfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwfmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dm7il")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gd3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eidxh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_272lh")
}],
"loop": false,
"name": &"vine_spin_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqun5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7catg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3rs4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ya8rk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygefj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akhny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccj8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojipj")
}],
"loop": false,
"name": &"vine_spin_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu8q5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14rer")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf22x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiewq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slu62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1610")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4tl0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeiic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xlrp")
}],
"loop": false,
"name": &"vines_summon_left",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cybcg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kim8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uktlg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ceagp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1vbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtb0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81nye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeade")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm0ve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbspi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls8dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyf41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_om8fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ujnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkkhg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj0jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8iqj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu07h")
}],
"loop": false,
"name": &"vines_summon_right",
"speed": 9.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cagpp"]
radius = 23.0
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_84dmf"]
radius = 5.0
height = 54.0

[node name="forgotten_golem" type="CharacterBody2D"]
collision_layer = 12
collision_mask = 9
script = ExtResource("1_sed1a")

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-2.30926e-13, -30)
rotation = 1.5708
scale = Vector2(2.36147, 2.50056)
shape = SubResource("CapsuleShape2D_yuh82")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_6k7h3")
position = Vector2(0, -27)
sprite_frames = SubResource("SpriteFrames_vnjlw")
animation = &"laser_right"
autoplay = "look_right"

[node name="DamagePlayer" parent="." instance=ExtResource("3_qvvkh")]
position = Vector2(0, -34)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayer"]
position = Vector2(0, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cagpp")

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Death_timer" type="Timer" parent="."]
wait_time = 2.1
one_shot = true

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="collision_with_player" type="CharacterBody2D" parent="."]
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision_with_player"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_84dmf")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("4_rmir1")
volume_db = -3.0
bus = &"Sound Effect"

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("4_r41nb")
volume_db = -5.0
bus = &"Sound Effect"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -21)
stream = ExtResource("5_h63cs")
volume_db = -5.0
bus = &"Sound Effect"

[node name="Laser_spawn_timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Laser Spawn right location" type="Marker2D" parent="."]
position = Vector2(5, -45)

[node name="Laser Spawn left location" type="Marker2D" parent="."]
position = Vector2(-4, -45)

[node name="laser attack end timer" type="Timer" parent="."]
one_shot = true

[node name="summon_vines_timer" type="Timer" parent="."]
wait_time = 2.05
one_shot = true

[node name="summon_vines_spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="delay_player_position_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="vine_spin_animation_timer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="vine_spin_summon_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Laser attack sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_iy55y")
bus = &"Sound Effect"

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qr1pw")
volume_db = -3.0
bus = &"Sound Effect"

[connection signal="timeout" from="Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Laser_spawn_timer" to="." method="_on_laser_spawn_timer_timeout"]
[connection signal="timeout" from="laser attack end timer" to="." method="_on_laser_attack_end_timer_timeout"]
[connection signal="timeout" from="summon_vines_timer" to="." method="_on_summon_vines_timer_timeout"]
[connection signal="timeout" from="summon_vines_spawn_timer" to="." method="_on_summon_vines_spawn_timer_timeout"]
[connection signal="timeout" from="delay_player_position_timer" to="." method="_on_delay_player_position_timer_timeout"]
[connection signal="timeout" from="vine_spin_animation_timer" to="." method="_on_vine_spin_animation_timer_timeout"]
[connection signal="timeout" from="vine_spin_summon_timer" to="." method="_on_vine_spin_summon_timer_timeout"]
